# Ndk-multi-module

./: README.md  settings.gradle
CMakeLists_Demo/: CMakeLists.txt  build.gradle
CMakeLists_Demo/src/androidTest/java/com/cmakelists/test/: ExampleInstrumentedTest.java
CMakeLists_Demo/src/main/: AndroidManifest.xml
CMakeLists_Demo/src/main/cpp/module1/: CMakeLists.txt  main.cpp
CMakeLists_Demo/src/main/cpp/module2/: CMakeLists.txt  main.cpp
CMakeLists_Demo/src/main/java/com/cmakelists/test/: MainActivity.java  Module1.java  Module2.java
CMakeLists_Demo/src/main/res/values/: strings.xml
CMakeLists_Demo/src/test/java/com/cmakelists/test/: ExampleUnitTest.java
MK_Demo/: build.gradle
MK_Demo/src/androidTest/java/com/mkbuild/test/: ExampleInstrumentedTest.java
MK_Demo/src/main/: AndroidManifest.xml
MK_Demo/src/main/cpp/: Android.mk  Application.mk
MK_Demo/src/main/cpp/module1/: Android.mk  main.cpp
MK_Demo/src/main/cpp/module2/: Android.mk  main.cpp
MK_Demo/src/main/java/com/mkbuild/test/: MainActivity.java  Module1.java  Module2.java
MK_Demo/src/main/res/values/: strings.xml
MK_Demo/src/test/java/com/mkbuild/test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
